Further improve notifications, seperate login/register into fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,5 @@
 <resources>
-    <string name="app_name">Quarters</string>
-    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
-        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
-        InstanceID token to logcat.</string>
-    <string name="subscribe_to_news">Subscribe To Smoke Detect topic</string>
-    <string name="log_token">Log Token</string>
-    <string name="reply_label">This is noise.</string>
-
-    <string name="msg_subscribed">Subscribed to Smoke Detect topic</string>
-    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
+    <string name="app_name">App Name</string>
 
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
     <!--
