--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">App Name</string>
+    <item name="visible" type="id"/>
+    <item name="masked" type="id"/>
+    <string name="app_name">Abode</string>
 
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
     <!--
@@ -7,4 +9,6 @@
         It should describe the category of notifications that will be sent through this channel
      -->
     <string name="default_notification_channel_name" translatable="true">smokeDetect</string>
+    <string name="action_settings">Settings</string>
+    <string name="registration_prompt">Please enter the 10-digit registration code found on the back of your device.</string>
 </resources>
