--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <item name="visible" type="id"/>
-    <item name="masked" type="id"/>
+    <item name="visible" type="id" />
+    <item name="masked" type="id" />
     <string name="app_name">Abode</string>
 
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
@@ -11,4 +11,6 @@
     <string name="default_notification_channel_name" translatable="true">smokeDetect</string>
     <string name="action_settings">Settings</string>
     <string name="registration_prompt">Please enter the 10-digit registration code found on the back of your device.</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
