Tried to figure out how set HomeID as channel name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <item name="visible" type="id" />
     <item name="masked" type="id" />
-    <string name="app_name">Smoldr</string>
+    <string name="app_name">SMOLDiR</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
     <string name="default_notification_channel_name">smokeDetect</string>
     <string name="action_settings">Settings</string>
