--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
     <string name="default_notification_channel_name">smokeDetect</string>
     <string name="action_settings">Settings</string>
-    <string name="registration_prompt">Please enter the 10-digit registration code found on the back of your device.</string>
+    <string name="registration_prompt">Please enter the 6-digit registration code found on the back of your device.</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="email">Email</string>
@@ -17,4 +17,6 @@
     <string name="login_prompt">Already have an account? Login.</string>
     <string name="create_account">Create Account</string>
     <string name="server_client_id">1009762478612-ooi106evsru4ba7euu21ntgf67k2puqv.apps.googleusercontent.com</string>
+    <string name="title_activity_wifi_fragment">WifiFragment</string>
+    <string name="wifi">Push WiFi information</string>
 </resources>
