--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="default_notification_channel_name">smokeDetect</string>
     <string name="action_settings">Settings</string>
     <string name="registration_prompt">Please enter the 6-digit registration code found on the back of your device.</string>
+    <string name="nickname_prompt">Give the device a location-based name (e.g. Kitchen).</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="email">Email</string>
