Created InstallFragment class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="server_client_id">1009762478612-ooi106evsru4ba7euu21ntgf67k2puqv.apps.googleusercontent.com</string>
     <string name="title_activity_wifi_fragment">WifiFragment</string>
     <string name="wifi">Push WiFi information</string>
+    <string name="install">Need to install? Click here.</string>
 </resources>
