--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <item name="masked" type="id" />
     <string name="app_name">SMOLDiR</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
-    <string name="default_notification_channel_name">smokeDetect</string>
+    <string name="default_notification_channel_name">SMOLDiR</string>
     <string name="action_settings">Settings</string>
     <string name="registration_prompt">Please enter the 6-digit registration code found on the back of your device.</string>
     <string name="nickname_prompt">Give the device a location-based name (e.g. Kitchen).</string>
