Changed SplashScreen image to a vector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <item name="visible" type="id" />
     <item name="masked" type="id" />
     <string name="app_name">SMOLDiR</string>
-    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="channel_id" translatable="false">SMOLDiR</string>
     <string name="default_notification_channel_name">SMOLDiR</string>
     <string name="action_settings">Settings</string>
     <string name="registration_prompt">Please enter the 6-digit registration code found on the back of your device.</string>
